# dreamgen

./: .blackboxrules  .clinerules  .env.docker  .env.example  .gitignore  .goosehints  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  README.md  ROADMAP.md  WINDOWS_NOTES.md  check_cuda.py  check_torch_install.py  cso-module.yaml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.context/: index.md
.github/workflows/: ci.yml  release.yml
cso-deployment/: BOOTSTRAP.md  CSO-BOOTSTRAP-ENHANCEMENT.md  README.md  push-images.sh  values-template.yaml
cso-deployment/argocd/: application.yaml
cso-deployment/chart/: Chart.yaml  values-production.yaml  values.yaml
cso-deployment/chart/templates/: _helpers.tpl  configmap.yaml  deployment-backend.yaml  deployment-frontend.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  service-backend.yaml  service-frontend.yaml  serviceaccount.yaml
cso-deployment/monitoring/: alerts.yaml  dashboard.json
data/: art_styles.json
host-image/src/: index.ts
logs/metrics/: batch_metrics_20250211_171601.json  batch_metrics_20250211_172001.json  batch_metrics_20250211_172800.json  batch_metrics_20250213_154407.json
scripts/: format.py  install_cuda_pytorch.py
src/: __init__.py  main.py
src/api/: __init__.py  server.py
src/generators/: image_editor.py  image_generator.py  mock_image_generator.py  prompt_generator.py
src/plugins/: __init__.py  art_style.py  day_of_week.py  holiday_fact.py  lora.py  meme.py  nearest_holiday.py  time_of_day.py  weather.py
src/utils/: cli.py  config.py  embeddings.py  error_handler.py  memory_manager.py  metrics.py  plugin_manager.py  s3_storage.py  storage.py  troubleshoot.py  web_ui.py
src/web/: enhanced_ui.py
tests/: test_art_style_plugin.py  test_cli.py  test_config_env.py  test_embeddings.py  test_image_gen.py  test_mock_generator.py  test_plugin_api.py  test_plugin_cli.py  test_prompt_generator.py  test_web_ui.py
thoughts/shared/plans/: restore-typer-cli-functionality.md
thoughts/shared/research/: 2025-08-31_19-23-57_wheel-packaging-templates.md  2025-09-01_14-33-02_dreamgen-rebranding-audit.md  2025-09-01_wheel-packaging-templates.md
web-ui/: next.config.ts  package-lock.json
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/components/: Gallery.tsx  Settings.tsx
web-ui/lib/: api.ts  cache.ts
